Added Create message when user clicks new message. Changed eSignature to behind User Sign In/password. Added update profile image in hamburger view. Check for nil when wrap image as data file saved in Defaults, if nil report error message and don't attempt to update image with nil from optional value

--- a/CarePointe/Base.lproj/LaunchScreen.storyboard
+++ b/CarePointe/Base.lproj/LaunchScreen.storyboard
@@ -21,7 +21,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchImage.png" translatesAutoresizingMaskIntoConstraints="NO" id="QdP-Ut-kF8">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Landing_screen.png" translatesAutoresizingMaskIntoConstraints="NO" id="QdP-Ut-kF8">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
                         </subviews>
@@ -40,6 +40,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="LaunchImage.png" width="1242" height="2208"/>
+        <image name="Landing_screen.png" width="747" height="1324"/>
     </resources>
 </document>
